--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -9,33 +9,59 @@
         android:gravity="bottom" android:id="@+id/linearLayout" tools:layout_editor_absoluteY="81dp">
 
     <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             app:srcCompat="@drawable/profiledefault"
             android:contentDescription="@string/nav_header_desc"
-            android:id="@+id/imageView"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
+            android:id="@+id/userImageNavHeader"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="59dp"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+            tools:ignore="MissingConstraints"
+            android:adjustViewBounds="false"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textColor="@android:color/white"
-            android:id="@+id/textView2"
+            android:id="@+id/userNameNavHeader"
             tools:text="gagres"
-            tools:layout_editor_absoluteY="111dp" tools:layout_editor_absoluteX="73dp"
-            tools:ignore="MissingConstraints"/>
+            tools:ignore="MissingConstraints" app:layout_constraintStart_toEndOf="@+id/userImageNavHeader"
+            android:layout_marginStart="16dp" android:layout_marginLeft="16dp"
+            app:layout_constraintTop_toTopOf="@+id/userImageNavHeader"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView"
+            android:id="@+id/userEmailNavHeader"
             tools:text="gagres@bbu.academy"
-            app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginLeft="16dp"
+            app:layout_constraintStart_toEndOf="@+id/userImageNavHeader" android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+            app:layout_constraintTop_toBottomOf="@+id/userNameNavHeader"/>
+    <Button
+            android:text="Login"
+            android:layout_width="69dp"
+            android:layout_height="30dp"
+            android:id="@+id/loginBtnNavHeader"
+            android:background="@android:color/transparent"
+            android:textColor="@android:color/white"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/userImageNavHeader" android:onClick="loginBtnNavClicked"
+            app:layout_constraintVertical_bias="1.0"/>
+    <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp" app:srcCompat="@drawable/addchannelbutton"
+            android:id="@+id/addChannelBtn"
+            android:background="@android:color/transparent" android:scaleType="fitXY" android:padding="5dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+            android:onClick="addChannelClicked"/>
 
 </android.support.constraint.ConstraintLayout>
